--- a/html/design-patterns-revisited.html
+++ b/html/design-patterns-revisited.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Game Programming Patterns / Decoupling Patterns / Message Queue</title>
+<title>Game Programming Patterns / Design Patterns Revisited</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
@@ -22,8 +22,8 @@
 </head>
 <body id="top">
 <div class="content">
-<h1 class="book"><a href="index.html">Game Programming Patterns</a> / <a href="decoupling-patterns.html">Decoupling Patterns</a></h1>
-<h1>Message Queue</h1>
+<h1 class="book"><a href="index.html">Game Programming Patterns</a></h1>
+<h1>Design Patterns Revisited</h1>
 <div class="in-progress">
   <span class="dismiss">&times;</span>
   <p><strong>This book is a work in progress!</strong></p>
@@ -61,7 +61,19 @@
     </tr>
   </table>
 </div>
-<p><em>Sorry, this chapter hasn&#x2019;t been written yet!</em></p>
+<p><em>Design Patterns: Elements of Reusable Object-Oriented Software</em> is nearly twenty years old as I write this. By the time you read this, there&#x2019;s a good chance it will be old enough to drink. For an industry as quickly moving as software, that&#x2019;s nearly ancient.
+That says something about how software architecture spans languages, technology, frameworks, and time.</p>
+<p>While I think <em>Design Patterns</em> is still fully relevant, we&#x2019;ve learned a lot in the past couple of decades. In this section, we&#x2019;ll walk through a handful of the original patterns the Gang of Four documented. For each pattern, I hope to have something relevant or interesting to say.</p>
+<p>Some patterns I think are overused (<a href="singleton.html">Singleton</a>), while others are underappreciated (<a href="command.html">Command</a>). A couple are in here because I want to explore their relevance specifically to games (<a href="flyweight.html">Flyweight</a> and <a href="observer.html">Observer</a>). Finally, sometimes I just think it&#x2019;s fun to see how the pattern is embedded in the larger field of programming (<a href="prototype.html">Prototype</a> and <a href="state.html">State</a>).</p>
+<h2><a href="#the-patterns" name="the-patterns">The Patterns</a></h2>
+<ul>
+<li><a href="command.html">Command</a></li>
+<li><a href="flyweight.html">Flyweight</a></li>
+<li><a href="observer.html">Observer</a></li>
+<li><a href="prototype.html">Prototype</a></li>
+<li><a href="singleton.html">Singleton</a></li>
+<li><a href="state.html">State</a></li>
+</ul>
 <p class="footer">&copy; 2009-2013 Bob Nystrom</p>
 </div>
 </body>
