--- a/html/index.html
+++ b/html/index.html
@@ -54,55 +54,48 @@
 <p>If you want to get in touch, you can email me at <tt>bob</tt> at this site. I must warn you that I'm terrible at replying to email. I have little free time so I try to focus on writing the book, but I do read and appreciate every email I get. If you want to read more of my writing on other subjects, check out <a href="http://journal.stuffwithstuff.com/">my blog</a>.</p>
 <h2>Table of Contents</h2>
 <ul>
-  <li>Getting Started
-      <ul>
-          <li><a href="introduction.html">Introduction</a></li>
-          <li>Why Software Architecture Matters</li>
-          <li>How to Use Patterns (and How Not to Abuse Them)</li>
-      </ul>
-  </li>
-  <li>Design Patterns Revisited
-      <ul>
-          <li><a href="prototype.html">Prototype</a></li>
-          <li><a href="singleton.html">Singleton</a></li>
-          <li><a href="flyweight.html">Flyweight</a></li>
-          <li><a href="command.html">Command</a></li>
-          <li>Observer</li>
-          <li><a href="state.html">State</a></li>
-      </ul>
-  </li>
-  <li>Game Programming Patterns
+  <li><a href="introduction.html">Introduction</a>
     <ul>
-      <li><a href="sequencing-patterns.html">Sequencing Patterns</a>
-        <ul>
-          <li><a href="double-buffer.html">Double Buffer</a></li>
-          <li><a href="game-loop.html">Game Loop</a></li>
-          <li><a href="update-method.html">Update Method</a></li>
-        </ul>
-      </li>
-      <li>Behaving Patterns
-        <ul>
-          <li>Bytecode</li>
-          <li><a href="component.html">Component</a></li>
-          <li><a href="subclass-sandbox.html">Subclass Sandbox</a></li>
-          <li><a href="type-object.html">Type Object</a></li>
-        </ul>
-      </li>
-      <li>Communicating Patterns
-        <ul>
-          <li>Context Parameter</li>
-          <li>Message Queue</li>
-          <li><a href="service-locator.html">Service Locator</a></li>
-        </ul>
-      </li>
-      <li><a href="optimization-patterns.html">Optimization Patterns</a>
-        <ul>
-          <li><a href="data-locality.html">Data Locality</li>
-          <li><a href="dirty-flag.html">Dirty Flag</a></li>
-          <li><a href="object-pool.html">Object Pool</a></li>
-          <li><a href="spatial-partition.html">Spatial Partition</a></li>
-        </ul>
-      </li>
+      <li><a href="architecture-performance-games.html">Architecture, Performance, and Games</a></li>
+    </ul>
+  </li>
+  <li><a href="design-patterns-revisited.html">Design Patterns Revisited</a>
+    <ul>
+      <li><a href="command.html">Command</a></li>
+      <li><a href="flyweight.html">Flyweight</a></li>
+      <li><a href="observer.html">Observer</a></li>
+      <li><a href="prototype.html">Prototype</a></li>
+      <li><a href="singleton.html">Singleton</a></li>
+      <li><a href="state.html">State</a></li>
+    </ul>
+  </li>
+  <li><a href="sequencing-patterns.html">Sequencing Patterns</a>
+    <ul>
+      <li><a href="double-buffer.html">Double Buffer</a></li>
+      <li><a href="game-loop.html">Game Loop</a></li>
+      <li><a href="update-method.html">Update Method</a></li>
+    </ul>
+  </li>
+  <li>Behavioral Patterns
+    <ul>
+      <li>Bytecode</li>
+      <li><a href="subclass-sandbox.html">Subclass Sandbox</a></li>
+      <li><a href="type-object.html">Type Object</a></li>
+    </ul>
+  </li>
+  <li>Decoupling Patterns
+    <ul>
+      <li><a href="component.html">Component</a></li>
+      <li>Message Queue</li>
+      <li><a href="service-locator.html">Service Locator</a></li>
+    </ul>
+  </li>
+  <li><a href="optimization-patterns.html">Optimization Patterns</a>
+    <ul>
+      <li><a href="data-locality.html">Data Locality</li>
+      <li><a href="dirty-flag.html">Dirty Flag</a></li>
+      <li><a href="object-pool.html">Object Pool</a></li>
+      <li><a href="spatial-partition.html">Spatial Partition</a></li>
     </ul>
   </li>
 </ul>
