--- a/html/introduction.html
+++ b/html/introduction.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Game Programming Patterns / Getting Started / Introduction</title>
+<title>Game Programming Patterns / Introduction</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
@@ -22,7 +22,7 @@
 </head>
 <body id="top">
 <div class="content">
-<h1 class="book"><a href="index.html">Game Programming Patterns</a> / Getting Started</h1>
+<h1 class="book"><a href="index.html">Game Programming Patterns</a></h1>
 <h1>Introduction</h1>
 <div class="in-progress">
   <span class="dismiss">&times;</span>
@@ -113,13 +113,18 @@ became figuring out how to write programs bigger than would fit in my
 head. Instead of just reading about &ldquo;How to Program in
 C++,&rdquo; I started trying to find books about how to <em>organize</em>
 programs.</p>
-<p>Fast-forward several years and a friend hands me a new book: <em>Design
+<p>Fast-forward several years and a <span name="friend">new friend</span> hands me a book: <em>Design
 Patterns: Elements of Reusable Object-Oriented Software</em>. Finally! The
 book I&#x2019;d been looking for since I was a teenager. I read it cover to
 cover in one sitting. I still struggled with my own programs, but it
 was such a relief to see that other people struggled too, and came up
 with solutions. I felt like I finally had a couple of <em>tools</em> to use
 instead of just my bare hands.</p>
+<aside name="friend">
+
+<p>This was the first time I&#x2019;d met a friend of my best friend, and five minutes after meeting him, I sat down on his couch and spent the next few hours completely ignoring him and reading. I&#x2019;d like to think my social skills have improved at least a little since then.</p>
+</aside>
+
 <p>In 2001, I landed my dream job: software engineer at Electronic Arts.
 I would be a real game programmer! I couldn&#x2019;t wait to get a look at
 some real games and see how the pros put them together. How did they
