--- a/html/architecture-performance-games.html
+++ b/html/architecture-performance-games.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Game Programming Patterns / Communicating Patterns / Context Parameter</title>
+<title>Game Programming Patterns / Introduction / Architecture, Performance, and Games</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
@@ -22,8 +22,8 @@
 </head>
 <body id="top">
 <div class="content">
-<h1 class="book"><a href="index.html">Game Programming Patterns</a> / Communicating Patterns</h1>
-<h1>Context Parameter</h1>
+<h1 class="book"><a href="index.html">Game Programming Patterns</a> / <a href="introduction.html">Introduction</a></h1>
+<h1>Architecture, Performance, and Games</h1>
 <div class="in-progress">
   <span class="dismiss">&times;</span>
   <p><strong>This book is a work in progress!</strong></p>
