--- a/html/bytecode.html
+++ b/html/bytecode.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Game Programming Patterns / Behaving Patterns / Bytecode</title>
+<title>Game Programming Patterns / Behavioral Patterns / Bytecode</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
@@ -22,7 +22,7 @@
 </head>
 <body id="top">
 <div class="content">
-<h1 class="book"><a href="index.html">Game Programming Patterns</a> / Behaving Patterns</h1>
+<h1 class="book"><a href="index.html">Game Programming Patterns</a> / <a href="behavioral-patterns.html">Behavioral Patterns</a></h1>
 <h1>Bytecode</h1>
 <div class="in-progress">
   <span class="dismiss">&times;</span>
