--- a/html/flyweight.html
+++ b/html/flyweight.html
@@ -22,7 +22,7 @@
 </head>
 <body id="top">
 <div class="content">
-<h1 class="book"><a href="index.html">Game Programming Patterns</a> / Design Patterns Revisited</h1>
+<h1 class="book"><a href="index.html">Game Programming Patterns</a> / <a href="design-patterns-revisited.html">Design Patterns Revisited</a></h1>
 <h1>Flyweight</h1>
 <div class="in-progress">
   <span class="dismiss">&times;</span>
@@ -337,9 +337,6 @@
 </li>
 <li>
 <p>When you&#x2019;re using the <a class="pattern" href="state.html">State</a> pattern, you often have "state" objects that don&#x2019;t have any fields that are specific to the machine that the state is being used in. The state&#x2019;s identity and methods are enough to be useful. In that case, you can apply this pattern and reuse that same state instance in multiple state machines at the same time without any problems.</p>
-</li>
-<li>
-<p>This pattern requires the flyweight to not have any state specific to its context, but sometimes a method in the flyweight needs <em>some</em> context to do its job. Since we can&#x2019;t <em>store</em> that data in the object, the only option is to pass it into the method. That&#x2019;s the <a href="context-parameter.html" class="pattern">Context Parameter</a> pattern.</p>
 </li>
 </ul>
 <p class="footer">&copy; 2009-2013 Bob Nystrom</p>
