--- a/html/service-locator.html
+++ b/html/service-locator.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Game Programming Patterns / Communicating Patterns / Service Locator</title>
+<title>Game Programming Patterns / Decoupling Patterns / Service Locator</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
@@ -22,7 +22,7 @@
 </head>
 <body id="top">
 <div class="content">
-<h1 class="book"><a href="index.html">Game Programming Patterns</a> / Communicating Patterns</h1>
+<h1 class="book"><a href="index.html">Game Programming Patterns</a> / <a href="decoupling-patterns.html">Decoupling Patterns</a></h1>
 <h1>Service Locator</h1>
 <div class="in-progress">
   <span class="dismiss">&times;</span>
