--- a/html/state.html
+++ b/html/state.html
@@ -22,7 +22,7 @@
 </head>
 <body id="top">
 <div class="content">
-<h1 class="book"><a href="index.html">Game Programming Patterns</a> / Design Patterns Revisited</h1>
+<h1 class="book"><a href="index.html">Game Programming Patterns</a> / <a href="design-patterns-revisited.html">Design Patterns Revisited</a></h1>
 <h1>State</h1>
 <div class="in-progress">
   <span class="dismiss">&times;</span>
