Redo illustration in Object Pool.

--- a/html/object-pool.html
+++ b/html/object-pool.html
@@ -97,7 +97,7 @@ That&#x2019;s fragmentation.</p>
 </aside>
 
 <p><span name="heap"></span></p>
-<p><img src="images/object-pool-heap-fragment.gif" /></p>
+<p><img src="images/object-pool-heap-fragment.png" /></p>
 <aside name="heap">
 
 <p>Here&#x2019;s how a heap becomes fragmented, and how it can cause an
