Revise "Design Patterns Revisited".

--- a/html/design-patterns-revisited.html
+++ b/html/design-patterns-revisited.html
@@ -61,10 +61,9 @@
     </tr>
   </table>
 </div>
-<p><em>Design Patterns: Elements of Reusable Object-Oriented Software</em> is nearly twenty years old as I write this. By the time you read this, there&#x2019;s a good chance it will be old enough to drink. For an industry as quickly moving as software, that&#x2019;s nearly ancient.
-That says something about how software architecture spans languages, technology, frameworks, and time.</p>
-<p>While I think <em>Design Patterns</em> is still fully relevant, we&#x2019;ve learned a lot in the past couple of decades. In this section, we&#x2019;ll walk through a handful of the original patterns the Gang of Four documented. For each pattern, I hope to have something relevant or interesting to say.</p>
-<p>Some patterns I think are overused (<a href="singleton.html">Singleton</a>), while others are underappreciated (<a href="command.html">Command</a>). A couple are in here because I want to explore their relevance specifically to games (<a href="flyweight.html">Flyweight</a> and <a href="observer.html">Observer</a>). Finally, sometimes I just think it&#x2019;s fun to see how the pattern is embedded in the larger field of programming (<a href="prototype.html">Prototype</a> and <a href="state.html">State</a>).</p>
+<p><em>Design Patterns: Elements of Reusable Object-Oriented Software</em> is nearly twenty years old as I write this. Unless you&#x2019;re reading over my shoulder, there&#x2019;s a good chance <em>Design Patterns</em> is old enough to drink by now. For an industry as quickly moving as software, that&#x2019;s nearly ancient. It&#x2019;s endurance says something about the timelessness of design compared to many languages, technologies, and methodologies.</p>
+<p>While I think <em>Design Patterns</em> is still relevant, we&#x2019;ve learned a lot in the past couple of decades. In this section, we&#x2019;ll walk through a handful of the original patterns the Gang of Four documented. For each pattern, I hope to have something useful or interesting to say.</p>
+<p>Some patterns I think are overused (<a href="singleton.html">Singleton</a>), while others are underappreciated (<a href="command.html">Command</a>). A couple are in here because I want to explore their relevance specifically to games (<a href="flyweight.html">Flyweight</a> and <a href="observer.html">Observer</a>). Finally, sometimes I just think it&#x2019;s fun to see how the pattern is enmeshed in the larger field of programming (<a href="prototype.html">Prototype</a> and <a href="state.html">State</a>).</p>
 <h2><a href="#the-patterns" name="the-patterns">The Patterns</a></h2>
 <ul>
 <li><a href="command.html">Command</a></li>
