--- a/html/observer.html
+++ b/html/observer.html
@@ -28,7 +28,7 @@
   <span class="dismiss">&times;</span>
   <p><strong>This book is a work in progress!</strong></p>
 
-  <p>If you see a mistake, find something unclear, or have a suggestion, please <a href="https://github.com/munificent/game-programming-patterns/issues/new" target="_blank">file a ticket</a>. To know when new chapters are up, join the mailing list:</p>
+  <p>If you see a mistake, find something unclear, or have a suggestion, please <a href="https://github.com/munificent/game-programming-patterns/issues" target="_blank">file a ticket</a>. To know when new chapters are up, join the mailing list:</p>
 
   <!-- Begin MailChimp Signup Form -->
   <div id="mc_embed_signup">
@@ -377,11 +377,11 @@ option and insert it at the front:</p>
 </aside>
 
 <p>The way you avoid dynamic allocation is simple: Since all of those nodes are the same size and type, you pre-allocate an <a href="object-pool.html" class="pattern">Object Pool</a> of them. That gives you a fixed-size pile of list nodes to work with, and you can use and reuse them as you need without having to hit an actual memory allocator.</p>
-<h2><a href="#"it&#x2019;s-too-decoupled"" name=""it&#x2019;s-too-decoupled"">"It&#x2019;s Too Decoupled"</a></h2>
+<h2><a href="#remaining-problems" name="remaining-problems">Remaining Problems</a></h2>
 <p>I think we&#x2019;ve banished the two main boogie men used to scare people off this pattern. As we&#x2019;ve seen, it&#x2019;s simple, fast, and can be made to play nice with memory management. But does that mean that you should observers all the time?</p>
 <p>Now, that&#x2019;s a different question. Like all design patterns, the Observer pattern isn&#x2019;t a cure-all. Even when implemented correctly and efficiently, it may not be the right solution. The reason design patterns get a bad rap is because people apply good patterns to the wrong problem and end up making things worse.</p>
 <p>Two challenges remain, one technical and one at something more like the maintainability level. We&#x2019;ll do the technical one first because those are always easiest.</p>
-<h3><a href="#destroying-subjects-and-observers" name="destroying-subjects-and-observers">Destroying subjects and observers</a></h3>
+<h2><a href="#destroying-subjects-and-observers" name="destroying-subjects-and-observers">Destroying subjects and observers</a></h2>
 <p>The sample code we walked through is solid, but it <span name="destruct">side-steps</span> an important issue: when happens when you delete a subject or an observer? If you just wantonly call <code>delete</code> on some observer, a subject may still have a pointer to it. That&#x2019;s now a dangling pointer into deallocated memory. When that subject tries to send a notification, well&hellip; things like that are why people end up hating C++.</p>
 <aside name="destruct">
 
@@ -414,7 +414,7 @@ option and insert it at the front:</p>
 <p>An even surer sign of its significance: it has <a href="http://en.wikipedia.org/wiki/Lapsed_listener_problem">a Wikipedia article</a>.</p>
 </aside>
 
-<h3><a href="#what&#x2019;s-going-on" name="what&#x2019;s-going-on">What&#x2019;s going on?</a></h3>
+<h2><a href="#what&#x2019;s-going-on" name="what&#x2019;s-going-on">What&#x2019;s going on?</a></h2>
 <p>The other, deeper issue with the Observer pattern is a direct consequence of its intended purpose. We use it because it helps us loosen the coupling between two pieces of code. It lets a subject indirectly communicate with some observer without being statically bound to it.</p>
 <p>This is a real win when you&#x2019;re trying to reason about the subject&#x2019;s behavior, and any hangers-on would be an annoying distraction. If you&#x2019;re poking at the physics engine, you really don&#x2019;t want your editor&thinsp;&mdash;&thinsp;or your mind&thinsp;&mdash;&thinsp;cluttered up with a bunch of stuff about achievements.</p>
 <p>On the other hand, if your program isn&#x2019;t working and the bug spans some chain of observers, reasoning about that communication flow is much more difficult. With an explicit coupling, it&#x2019;s as easy as looking up the method being called. Child&#x2019;s play for your average IDE, since the coupling is static.</p>
