--- a/html/observer.html
+++ b/html/observer.html
@@ -69,14 +69,14 @@
 
 <p>Observer is one of the most widely used and widely known of the original Gang of Four patterns, but the game development world can be strangely cloistered at times, so maybe this is all news to you. In case you haven&#x2019;t left the abbey in a while, let me walk you through a motivating example.</p>
 <h2><a href="#achievement-unlocked" name="achievement-unlocked">Achievement Unlocked</a></h2>
-<p>Say you&#x2019;re adding an <span name="weasel">achievements</span> system to your game. It will feature dozens of different badges players can earn for completing specific milestones like "Kill 100 Monkey Demons", "Fall of a Bridge", or "Complete a Level Wielding Only a Dead Weasel".</p>
+<p>Say you&#x2019;re adding an <span name="weasel">achievements</span> system to your game. It will feature dozens of different badges players can earn for completing specific milestones like "Kill 100 Monkey Demons", "Fall off a Bridge", or "Complete a Level Wielding Only a Dead Weasel".</p>
 <aside name="weasel">
 
 <p><img src="images/observer-weasel-wielder.png" width="240" /></p>
 <p>I swear I had no double meaning in mind when I drew this.</p>
 </aside>
 
-<p>This is tricky to implement cleanly since you have such a wide range of achievements that are unlocked by all sorts of different behaviors. If you aren&#x2019;t careful, tendrils of your achievement system will twine their way through every dark corner of your codebase. Sure, "Fall of a Bridge" is somehow tied to the <span name="physics">physics engine</span>, but do you really want to see a call to <code>unlockFallOffBridge()</code> right in the middle of the linear algebra in your collision resolution algorithm?</p>
+<p>This is tricky to implement cleanly since you have such a wide range of achievements that are unlocked by all sorts of different behaviors. If you aren&#x2019;t careful, tendrils of your achievement system will twine their way through every dark corner of your codebase. Sure, "Fall off a Bridge" is somehow tied to the <span name="physics">physics engine</span>, but do you really want to see a call to <code>unlockFallOffBridge()</code> right in the middle of the linear algebra in your collision resolution algorithm?</p>
 <aside name="physics">
 
 <p>This is a rhetorical question. No self-respecting physics programmer would ever let you sully their beautiful mathematics with something as pedestrian as <em>gameplay</em>.</p>
@@ -84,7 +84,7 @@
 
 <p>What we&#x2019;d like, as always, is to have all the code concerned with one aspect of the game nicely lumped in one place. The challenge is that achievements are triggered by a bunch of different aspects of gameplay. How can that work without coupling the achievement code to all of them?</p>
 <p>That&#x2019;s what the observer pattern is for. It lets one piece of code announce that something interesting happened <em>without actually caring who receives the notification</em>.</p>
-<p>For example, you&#x2019;ve got some physics code that handles gravity and tracks which bodies are relaxing on nice flat surfaces and which are plummeting towards sure demise. To implement the "Fall of a Bridge" badge, you could just jam the achievement code right in there, but that&#x2019;s a mess. Instead, you can just do:</p>
+<p>For example, you&#x2019;ve got some physics code that handles gravity and tracks which bodies are relaxing on nice flat surfaces and which are plummeting towards sure demise. To implement the "Fall off a Bridge" badge, you could just jam the achievement code right in there, but that&#x2019;s a mess. Instead, you can just do:</p>
 <div class="codehilite"><pre><span class="kt">void</span> <span class="n">Physics</span><span class="o">::</span><span class="n">updateBody</span><span class="p">(</span><span class="n">PhysicsBody</span><span class="o">&amp;</span> <span class="n">body</span><span class="p">)</span>
 <span class="p">{</span>
   <span class="kt">bool</span> <span class="n">wasOnSurface</span> <span class="o">=</span> <span class="n">body</span><span class="p">.</span><span class="n">isOnSurface</span><span class="p">();</span>
@@ -110,7 +110,7 @@
 <p>If you don&#x2019;t already know how to implement the pattern, you could probably guess just from the above description, but to keep things easy on you, I&#x2019;ll walk
 through it quickly.</p>
 <h3><a href="#the-observer" name="the-observer">The observer</a></h3>
-<p>We&#x2019;ll start with the nosy class that wants to know when another other object does something interesting. It accomplishes that by implementing this:</p>
+<p>We&#x2019;ll start with the nosy class that wants to know when another object does something interesting. It accomplishes that by implementing this:</p>
 <p><span name="signature"></span></p>
 <div class="codehilite"><pre><span class="k">class</span> <span class="nc">Observer</span>
 <span class="p">{</span>
@@ -239,7 +239,7 @@ through it quickly.</p>
 <p>The Observer pattern gets a particularly bad rap here because it&#x2019;s been known to hang around with some shady characters named "events", <span name="names">"messages"</span>, and even "data binding". Some of those systems <em>can</em> be slow (often deliberately, and for good reason). They involve things like queuing or doing dynamic allocation for each notification.</p>
 <aside name="names">
 
-<p>This is why I think documenting patterns is important. When we get fuzzy about terminology, we lose the ability to communicate clearly and succintly. You say, "Observer" and someone hears "Messaging" because either no one bothered to write down the difference or they didn&#x2019;t happen to read it.</p>
+<p>This is why I think documenting patterns is important. When we get fuzzy about terminology, we lose the ability to communicate clearly and succinctly. You say, "Observer" and someone hears "Messaging" because either no one bothered to write down the difference or they didn&#x2019;t happen to read it.</p>
 <p>That&#x2019;s what I&#x2019;m trying to do with this book. And, to cover my bases, I&#x2019;ve got a chapter on messaging too: <a href="message-queue.html" class="pattern">Message Queue</a>.</p>
 </aside>
 
@@ -248,7 +248,7 @@ through it quickly.</p>
 <h3><a href="#it&#x2019;s-too-*fast*" name="it&#x2019;s-too-*fast*">It&#x2019;s too <em>fast?</em></a></h3>
 <p>In fact, you have to be careful because the Observer pattern <em>is</em> synchronous. The subject invokes its observers directly, which means it does&#x2019;t resume its own work until all of the observers have returned from their notification methods. A slow observer can block a subject.</p>
 <p>This sounds scary, but in practice it&#x2019;s not the end of the world. It&#x2019;s just something you have to be aware of. UI programmers&thinsp;&mdash;&thinsp;who&#x2019;ve been doing event-based programming like this for ages&thinsp;&mdash;&thinsp;have an established motto for this: "stay off the UI thread".</p>
-<p>If you&#x2019;re responding to a event synchronously, you need to finish and return control as quickly as possible so that the UI doesn&#x2019;t lock up. When you have slow to work to do, push it onto another thread or a work queue and you&#x2019;re good. It takes a little discipline, but it&#x2019;s not rocket science.</p>
+<p>If you&#x2019;re responding to a event synchronously, you need to finish and return control as quickly as possible so that the UI doesn&#x2019;t lock up. When you have slow work to do, push it onto another thread or a work queue and you&#x2019;re good. It takes a little discipline, but it&#x2019;s not rocket science.</p>
 <h2><a href="#"it-does-too-much-dynamic-allocation"" name=""it-does-too-much-dynamic-allocation"">"It Does Too Much Dynamic Allocation"</a></h2>
 <p>Whole tribes of the programmer clan&thinsp;&mdash;&thinsp;including many game developers&thinsp;&mdash;&thinsp;have moved
 onto garbage collected languages, and dynamic allocation isn&#x2019;t the boogie man
@@ -350,7 +350,7 @@ option and insert it at the front:</p>
 </aside>
 
 <p>Because we have a singly linked list, we have to walk it to find the observer we&#x2019;re removing. We&#x2019;d have to do the same thing if we were using a regular array for that matter. If we use a <em>doubly</em> linked list, where each observer has a pointer to both the observer after it and before it, we can remove an observer in constant time. If this were real code, I&#x2019;d do that.</p>
-<p>The <span name="chain">only</span> thing left to do is sending a notification. That&#x2019;s as simple as walking the list:</p>
+<p>The <span name="chain">only</span> thing left to do is send a notification. That&#x2019;s as simple as walking the list:</p>
 <div class="codehilite"><pre><span class="kt">void</span> <span class="n">Subject</span><span class="o">::</span><span class="n">notify</span><span class="p">(</span><span class="k">const</span> <span class="n">Entity</span><span class="o">&amp;</span> <span class="n">entity</span><span class="p">,</span> <span class="n">Event</span> <span class="n">event</span><span class="p">)</span>
 <span class="p">{</span>
   <span class="n">Observer</span><span class="o">*</span> <span class="n">observer</span> <span class="o">=</span> <span class="n">head_</span><span class="p">;</span>
@@ -375,7 +375,7 @@ option and insert it at the front:</p>
 <p>You may be able to live with that limitation. I find it more common for a <em>subject</em> to have multiple <em>observers</em> than vice versa. If it <em>is</em> a problem for you, there is another more complex solution you can use that still doesn&#x2019;t require dynamic allocation. It&#x2019;s too long to cram into this chapter, but I&#x2019;ll sketch it out and let you fill in the blanks.</p>
 <p>Like before, each subject will have a linked list of observers. However, those list nodes won&#x2019;t be the observer objects themselves. Instead, they&#x2019;ll be separate little "list <span name="intrusive">node</span>" objects that contain a pointer to the observer and then a pointer to the next node in the list.</p>
 <p><img src="images/observer-nodes.png" /></p>
-<p>Since multiple nodes can all point to the same observer, that means an observer can be more than one subject&#x2019;s list at the same time. We&#x2019;re back to being able to observer multiple subjects simultaneously.</p>
+<p>Since multiple nodes can all point to the same observer, that means an observer can be in more than one subject&#x2019;s list at the same time. We&#x2019;re back to being able to observe multiple subjects simultaneously.</p>
 <aside name="intrusive">
 
 <p>Linked lists come in two flavors. In the one you learned in school, you have a node object that contains the data. In our previous linked observer example, that was flipped around: the <em>data</em> (in this case the observer) contained the <em>node</em> (i.e. the <code>next_</code> pointer).</p>
@@ -388,7 +388,7 @@ option and insert it at the front:</p>
 <p>Now, that&#x2019;s a different question. Like all design patterns, the Observer pattern isn&#x2019;t a cure-all. Even when implemented correctly and efficiently, it may not be the right solution. The reason design patterns get a bad rap is because people apply good patterns to the wrong problem and end up making things worse.</p>
 <p>Two challenges remain, one technical and one at something more like the maintainability level. We&#x2019;ll do the technical one first because those are always easiest.</p>
 <h2><a href="#destroying-subjects-and-observers" name="destroying-subjects-and-observers">Destroying subjects and observers</a></h2>
-<p>The sample code we walked through is solid, but it <span name="destruct">side-steps</span> an important issue: when happens when you delete a subject or an observer? If you just wantonly call <code>delete</code> on some observer, a subject may still have a pointer to it. That&#x2019;s now a dangling pointer into deallocated memory. When that subject tries to send a notification, well&hellip; things like that are why people end up hating C++.</p>
+<p>The sample code we walked through is solid, but it <span name="destruct">side-steps</span> an important issue: what happens when you delete a subject or an observer? If you just wantonly call <code>delete</code> on some observer, a subject may still have a pointer to it. That&#x2019;s now a dangling pointer into deallocated memory. When that subject tries to send a notification, well&hellip; things like that are why people end up hating C++.</p>
 <aside name="destruct">
 
 <p>Not to point fingers, but I&#x2019;ll note that <em>Design Patterns</em> doesn&#x2019;t mention this issue at all.</p>
@@ -433,7 +433,7 @@ option and insert it at the front:</p>
 <p>Design Patterns came out in the <span name="90s">90s</span>. Back then object-oriented programming was <em>the</em> hot paradigm. Every programmer on Earth wanted to "Learn OOP in 30 Days" and middle managers paid them based on the number of classes they created. Engineers judged their mettle by the depth of their inheritance hiearchies.</p>
 <aside name="90s">
 
-<p>That same year, Ace of Bass had not one but <em>three</em> hit singles, so that may tell you something about our taste and judgment back then.</p>
+<p>That same year, Ace of Base had not one but <em>three</em> hit singles, so that may tell you something about our taste and judgment back then.</p>
 </aside>
 
 <p>The Observer pattern got popular during that zeitgeist, so it&#x2019;s no surprise that it&#x2019;s class heavy. But mainstream coders now are more comfortable with functional programming. Having to implement an entire interface just to receive a notification doesn&#x2019;t fit today&#x2019;s aesthetic.</p>
