--- a/html/object-pool.html
+++ b/html/object-pool.html
@@ -270,13 +270,16 @@ memory for an object slot when the object is reclaimed.</p>
 </aside>
 
 <h3><a href="#unused-objects-will-remain-in-memory" name="unused-objects-will-remain-in-memory">Unused objects will remain in memory</a></h3>
-<p>It&#x2019;s rare to use an Object Pool on a system that also has a garbage
-collector, but if you do, beware of a potential conflict between the
-two. Since the pool doesn&#x2019;t actually deallocate objects when no longer
+<p>Object Pools are less common in systems that support garbage
+collection because the memory manager will usually deal
+with fragmentation for you. But pools are still useful there to avoid
+the cost of allocation and deallocation, especially on mobile
+devices with slower CPUs and simpler GC implementations.</p>
+<p>If you do use an Object Pool there, beware of a potential conflict. Since
+the pool doesn&#x2019;t actually deallocate objects when no longer
 in use, they remain in memory. If they contain references to <em>other</em>
-objects, it will prevent the collector from reclaiming those objects.</p>
-<p>If you do use an Object Pool and a garbage collector together, there&#x2019;s
-a simple fix. When a pooled object is no longer in use, clear any
+objects, it will prevent the collector from reclaiming those too.
+To avoid this, when a pooled object is no longer in use, clear any
 references it has to other objects.</p>
 <h2><a href="#sample-code" name="sample-code">Sample Code</a></h2>
 <h3><a href="#first-pass" name="first-pass">First pass</a></h3>
