--- a/html/message-queue.html
+++ b/html/message-queue.html
@@ -61,7 +61,141 @@
     </tr>
   </table>
 </div>
-<p><em>Sorry, this chapter hasn&#x2019;t been written yet!</em></p>
+<h2><a href="#intent" name="intent">Intent</a></h2>
+<p><em>italicized sentence</em></p>
+<h2><a href="#motivation" name="motivation">Motivation</a></h2>
+<p><strong>Bunch of paragraphs, maybe some subheaders</strong></p>
+<h2><a href="#the-pattern" name="the-pattern">The Pattern</a></h2>
+<p><strong>Paragraph</strong></p>
+<h2><a href="#when-to-use-it" name="when-to-use-it">When to Use It</a></h2>
+<p><strong>Couple of paras</strong></p>
+<h2><a href="#keep-in-mind" name="keep-in-mind">Keep in Mind</a></h2>
+<p><strong>A few subheaders, paragraph or two each</strong></p>
+<h2><a href="#sample-code" name="sample-code">Sample Code</a></h2>
+<p><strong>Bunch of paragraphs, maybe some subheaders</strong></p>
+<h2><a href="#design-decisions" name="design-decisions">Design Decisions</a></h2>
+<p>**Few subheader questions, bullet list of answers for each</p>
+<h2><a href="#see-also" name="see-also">See Also</a></h2>
+<p><strong>Bullet list</strong></p>
+<ul>
+<li>if want something lighter-weight and faster, observer is close cousin</li>
+</ul>
+<hr />
+<p>random notes:</p>
+<ul>
+<li>motivations</li>
+<li>decouple when event happens from when respond to it</li>
+<li>make responding to event not block sender</li>
+<li>respond to event on different thread</li>
+<li>batch or coalesce events together</li>
+<li>prioritize and drop events</li>
+<li>
+<p>respond to events at appropriate time</p>
+</li>
+<li>
+<p>have to think about lifetime of event object itself</p>
+</li>
+<li>
+<p>need to ensure that when event is received later, world state is still
+  meaningful and useful for handler</p>
+</li>
+<li>for example, send "monster died" event</li>
+<li>achievement system wants to track it</li>
+<li>gets event five frames later</li>
+<li>
+<p>by then, monster object is deleted, so achievement system can&#x2019;t tell what
+    kind of monster it was or anything else about it</p>
+</li>
+<li>
+<p>observer will crash on cycles. queue can handle it (though can get stuck in
+  feedback loop)</p>
+</li>
+<li>
+<p>dovetails really nicely with fsms, which want to receive stream of events</p>
+</li>
+<li>
+<p>1-many, many-1, and many-to-many queues</p>
+</li>
+<li>1-many: broadcast events. like observer pattern<ul>
+<li>more likely to use "events"</li>
+</ul>
+</li>
+<li>many-1: sink. think audio engine where anything can tell it to play a sound
+    and it has one internal queue is uses to process those requests<ul>
+<li>more likely to use "messages"</li>
+</ul>
+</li>
+<li>
+<p>many-many: like global event bus. anything can announce something
+    interesting. anything can receive it. filtering becomes much more important.</p>
+<ul>
+<li>see also blackboards</li>
+</ul>
+</li>
+<li>
+<p>talk about threading</p>
+</li>
+<li>with observer, message receiver always runs on <em>sender&#x2019;s</em> thread</li>
+<li>with queue, can hop threads so receiver runs on thread it expects to run on</li>
+<li>with a global event queue, that means objects listening to queue can end up
+  with infinite lifetime if not explicitly unregistered. talk about memory
+  leak</li>
+<li>coalescing or batching events together</li>
+<li>event priority to handle too many queued events</li>
+<li>talk about ordering. is it a strict queue or can things be delivered out of
+  order? how does threading affect that?</li>
+<li>relate to job systems and worker threads?</li>
+<li>relate to event-based programming</li>
+<li>game loop is sort of like event loop where "event" is a tick</li>
+<li>some simple games can actually use os event loop for game loop by updating
+    game on "idle" events. not precise enough for real-time games</li>
+<li>publish/subscribe</li>
+<li>very similar model</li>
+<li>usually used to describe behavior of distributed systems, and not within
+    single application</li>
+<li>sample code should walk through ring buffer</li>
+<li>contrast with actor model: each actor has queue, but event/message is sent
+  to specific actor and not broadcast</li>
+<li>mention erlang</li>
+<li>maybe talk about single global queue, then discuss more localized queues</li>
+<li>eventually consider each game entity has its own queue</li>
+<li>
+<p>ta-da actor pattern</p>
+</li>
+<li>
+<p>channels in go</p>
+</li>
+<li>talk a bit about message queues as middleware in business apps: zeromq, etc.</li>
+<li>queueing is helpful for networking.</li>
+<li>gives meaningful serializable thing to send to server</li>
+<li>
+<p>see command pattern</p>
+</li>
+<li>
+<p>talk about how user input is usually queue</p>
+</li>
+<li>link to game loop which discusses pulling input versus push</li>
+<li>
+<p>also talk about in general about when to pull events off queues and how that
+    ties to game loop</p>
+</li>
+<li>
+<p>have to think about what event/message represents. is it notice that thing
+  happened, or request for thing to happen?</p>
+</li>
+<li>for example, do we sent "object collided" event and wait for audio engine
+    to receive that and play sound, or do we sent "play collision sound"
+    message?</li>
+<li>depends on sender and intended receiver</li>
+<li>if queue is global, event is usually what happened</li>
+<li>if queue is specific to obj or system, usually message: request for action</li>
+<li>if sender and intended receiver are in different domains (physics and audio)
+    then usually event. if in same domain (audio component of actor and audio
+    engine) to be command or message</li>
+</ul>
+<p>http://www.gamedev.net/topic/136778-event-queue-and-events-in-games/
+http://gamedev.stackexchange.com/questions/14383/best-way-to-manage-in-game-events
+http://gamedev.stackexchange.com/questions/7718/event-driven-communication-in-game-engine-yes-or-no?rq=1</p>
 <p class="footer">&copy; 2009-2013 Bob Nystrom</p>
 </div>
 </body>
