"Message Queue" -> "Event Queue".

--- a/html/component.html
+++ b/html/component.html
@@ -953,11 +953,17 @@ messages:</p>
 </pre></div>
 
 
-<p>Now, if a component has access to its container, it can send
+<p><span name="queue">Now</span>, if a component has access to its container, it can send
 messages to it which will in turn be rebroadcast to all of its
 sibling components. (And back to itself for that matter; be
 careful that you don&#x2019;t get stuck in a feedback loop!) This has
 a couple of consequences:</p>
+<aside name="queue">
+
+<p>If you really want to get fancy, you can even make this message system
+<em>queue</em> messages to be delivered later. For more on this, see <a href="event-queue.html" class="pattern">Event Queue</a>.</p>
+</aside>
+
 </li>
 <li>
 <p><em>Sibling components are decoupled.</em> By going <span name="mediator">through</span> the parent
