--- a/html/command.html
+++ b/html/command.html
@@ -231,7 +231,12 @@
 <p>Assuming <code>hero</code> is a reference to the player&#x2019;s character, this correctly drives him based on the user&#x2019;s input, so we&#x2019;re back to the same behavior we had in the first example. But adding a layer of indirection between the command and the actor that performs it has given us a neat little ability: we could let the player control any actor in the game now by just changing the actor we execute the commands on.</p>
 <p>In practice, that&#x2019;s not a common feature. But there is a similar use case that <em>does</em> pop up frequently. So far, we&#x2019;ve only considered the player-driven character, but what about all of the other actors in the world? Those are driven by the game&#x2019;s AI. We can use this same command pattern as the interface between the AI engine and the actors: the AI code just emits <code>Command</code> objects.</p>
 <p>The decoupling here between the AI that selects commands, and the actor code that performs them gives us a lot of flexibility. We can use different AI modules for different actors. Or we can mix and match AI for different kinds of behavior. Want a more aggressive opponent? Just plug-in a more aggressive AI to generate commands for it. In fact, we can even bolt AI onto the <em>player&#x2019;s</em> character, which can be useful for things like demo mode where the game needs to run on auto-pilot.</p>
-<p>By making the commands that control an actor first class objects, we&#x2019;ve removed the tight coupling of a direct method call. Instead, think of it as a queue or stream of commands.</p>
+<p><span name="queue">By</span> making the commands that control an actor first class objects, we&#x2019;ve removed the tight coupling of a direct method call. Instead, think of it as a queue or stream of commands.</p>
+<aside name="queue">
+
+<p>For lots more on what queueing can do for you, see <a href="event-queue.html" class="pattern">Event Queue</a>.</p>
+</aside>
+
 <p><span name="stream"></span></p>
 <p><img src="images/command-stream.png" /></p>
 <aside name="stream">
@@ -239,8 +244,8 @@
 <p>Why did I feel the need to draw a picture of a "stream" for you? And why does it look like a tube?</p>
 </aside>
 
-<p>Some code (the input handler or AI) <span name="queue">produces</span> commands and places them in the stream. Other code (the dispatcher or actor itself) consumes commands and invokes them. By sticking that queue in the middle, we&#x2019;ve decoupled the producer on one end from the consumer on the other.</p>
-<aside name="queue">
+<p>Some code (the input handler or AI) <span name="network">produces</span> commands and places them in the stream. Other code (the dispatcher or actor itself) consumes commands and invokes them. By sticking that queue in the middle, we&#x2019;ve decoupled the producer on one end from the consumer on the other.</p>
+<aside name="network">
 
 <p>If we take those commands and make them <em>serializable</em>, we could send the stream of them over the network. We can take the player&#x2019;s input, push it over the network to another machine, and then replay it. That&#x2019;s one important piece of making a networked multi-player game.</p>
 </aside>
