--- a/html/event-queue.html
+++ b/html/event-queue.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Game Programming Patterns / Decoupling Patterns / Message Queue</title>
+<title>Game Programming Patterns / Decoupling Patterns / Event Queue</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
@@ -23,7 +23,7 @@
 <body id="top">
 <div class="content">
 <h1 class="book"><a href="index.html">Game Programming Patterns</a> / <a href="decoupling-patterns.html">Decoupling Patterns</a></h1>
-<h1>Message Queue</h1>
+<h1>Event Queue</h1>
 <div class="in-progress">
   <span class="dismiss">&times;</span>
   <p><strong>This book is a work in progress!</strong></p>
