--- a/html/index.html
+++ b/html/index.html
@@ -56,7 +56,7 @@
 <ul>
   <li><a href="introduction.html">Introduction</a>
     <ul>
-      <li><a href="architecture-performance-games.html">Architecture, Performance, and Games</a></li>
+      <li>Architecture, Performance, and Games <em>(not written yet)</em></li>
     </ul>
   </li>
   <li><a href="design-patterns-revisited.html">Design Patterns Revisited</a>
@@ -78,7 +78,7 @@
   </li>
   <li>Behavioral Patterns
     <ul>
-      <li>Bytecode</li>
+      <li>Bytecode <em>(not written yet)</em></li>
       <li><a href="subclass-sandbox.html">Subclass Sandbox</a></li>
       <li><a href="type-object.html">Type Object</a></li>
     </ul>
@@ -86,7 +86,7 @@
   <li>Decoupling Patterns
     <ul>
       <li><a href="component.html">Component</a></li>
-      <li>Message Queue</li>
+      <li><a href="event-queue.html">Event Queue</a></li>
       <li><a href="service-locator.html">Service Locator</a></li>
     </ul>
   </li>
