--- a/html/observer.html
+++ b/html/observer.html
@@ -239,8 +239,8 @@ through it quickly.</p>
 <p>The Observer pattern gets a particularly bad rap here because it&#x2019;s been known to hang around with some shady characters named "events", <span name="names">"messages"</span>, and even "data binding". Some of those systems <em>can</em> be slow (often deliberately, and for good reason). They involve things like queuing or doing dynamic allocation for each notification.</p>
 <aside name="names">
 
-<p>This is why I think documenting patterns is important. When we get fuzzy about terminology, we lose the ability to communicate clearly and succinctly. You say, "Observer" and someone hears "Messaging" because either no one bothered to write down the difference or they didn&#x2019;t happen to read it.</p>
-<p>That&#x2019;s what I&#x2019;m trying to do with this book. And, to cover my bases, I&#x2019;ve got a chapter on messaging too: <a href="message-queue.html" class="pattern">Message Queue</a>.</p>
+<p>This is why I think documenting patterns is important. When we get fuzzy about terminology, we lose the ability to communicate clearly and succinctly. You say, "Observer" and someone hears "Events" or "Messaging" because either no one bothered to write down the difference or they didn&#x2019;t happen to read it.</p>
+<p>That&#x2019;s what I&#x2019;m trying to do with this book. And, to cover my bases, I&#x2019;ve got a chapter on events and messages too: <a href="event-queue.html" class="pattern">Event Queue</a>.</p>
 </aside>
 
 <p>But, now that you&#x2019;ve seen how the pattern is actually implemented, you know that isn&#x2019;t the case. Sending a notification is just walking a list and calling some virtual methods. Granted, it&#x2019;s a <em>bit</em> slower than a statically dispatched method, but that cost is negligible in all but the most performance critical code.</p>
